tests/baselines/reference/instanceQuery-0012.errors.txt
instanceQuery-0012.ts(39,8): error TS1360: Type '(instanceof A1 & A1)' does not satisfy the expected type '(instanceof A2 & A2)'.
  'new A1() instanceof A2' would evaluate as 'false'
instanceQuery-0012.ts(41,10): error TS1360: Type '{}' does not satisfy the expected type '(instanceof A2 & A2)'.
  Object type {} is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
instanceQuery-0012.ts(43,9): error TS1360: Type 'number' does not satisfy the expected type '(instanceof A2 & A2)'.
  Object type 1 is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
instanceQuery-0012.ts(45,8): error TS1360: Type 'bigint' does not satisfy the expected type '(instanceof A2 & A2)'.
  Object type 1n is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
instanceQuery-0012.ts(47,9): error TS1360: Type 'typeof sym' does not satisfy the expected type '(instanceof A2 & A2)'.
  Object type unique symbol is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2


==== instanceQuery-0012.ts (5 errors) ====
    namespace iq0012b {
    
        interface A1 {}
        interface A1Constructor {
            prototype: A1;
            new(): A1;
        }
        declare const A1: A1Constructor;
    
        interface A2  extends A1 {}
        interface A2Constructor {
            prototype: A2;
            new(): A2;
        }
        declare const A2: A2Constructor;
    
        declare let a1: instanceof A1;
        declare let a2: instanceof A2;
        const one = 1 as const;
        const sym = Symbol();
    
        ////////////////////////////////////////////////////////////////////
        // compare to rhs without instanceof -- none of these are errors, which might not be desirable.
    
        a1 satisfies A2; // not an error
    
        ({}) satisfies A2; // not an error
    
        one satisfies A2; // not an error
    
        1n satisfies A2; // not an error
    
        sym satisfies A2; // not an error
    
    
        ////////////////////////////////////////////////////////////////////
        // using instanceof queries these can no be discriminated
    
        a1 satisfies instanceof A2; // should be error
           ~~~~~~~~~
!!! error TS1360: Type '(instanceof A1 & A1)' does not satisfy the expected type '(instanceof A2 & A2)'.
!!! error TS1360:   'new A1() instanceof A2' would evaluate as 'false'
    
        ({}) satisfies instanceof A2; // should be error
             ~~~~~~~~~
!!! error TS1360: Type '{}' does not satisfy the expected type '(instanceof A2 & A2)'.
!!! error TS1360:   Object type {} is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
    
        one satisfies instanceof A2; // should be error
            ~~~~~~~~~
!!! error TS1360: Type 'number' does not satisfy the expected type '(instanceof A2 & A2)'.
!!! error TS1360:   Object type 1 is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
    
        1n satisfies instanceof A2; // should be error
           ~~~~~~~~~
!!! error TS1360: Type 'bigint' does not satisfy the expected type '(instanceof A2 & A2)'.
!!! error TS1360:   Object type 1n is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
    
        sym satisfies instanceof A2; // should be error
            ~~~~~~~~~
!!! error TS1360: Type 'typeof sym' does not satisfy the expected type '(instanceof A2 & A2)'.
!!! error TS1360:   Object type unique symbol is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof A2
    
    }